# testLame

./: .gitmodules  CMakeLists.txt  main.cpp
audio/: mp3Encoder.cpp  mp3Encoder.h  wavReader.cpp  wavReader.h
baseClasses/: QueueBase.cpp  QueueBase.h  WorkerBase.cpp  WorkerBase.h
coder/: Coder.cpp  Coder.h  CoderQueue.cpp  CoderQueue.h
platformDependent/: folderReader.cpp  folderReader.h
